--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,14 +1,18 @@
 .gallery {
   position: relative;
   background: linear-gradient(to bottom, #fff5f6 45%, #ffffff 45%);
-  padding-top: 48px;
-  padding-bottom: 40px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+  .container{
+    display: grid;
+  flex-flow: column wrap;
+  align-content: space-between;
+  }
 }
 .gallery__visual {
   position: relative;
   width: 286px;
   height: 122px;
-  left: 6px;
   margin: 0 auto;
 }
 
@@ -18,20 +22,114 @@
   height: auto;
 }
 
+
+/* ---- grid ---- */
+
+// .grid {
+//   background:transparent;
+//   max-width: 1200px;
+// }
+
+/* clearfix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- grid-item ---- */
+
+.grid-item {
+  width: 40px;
+  height: 40px;
+  float: left;
+  
+}
+.grid-item--box1{
+position: absolute;
+top: 30%;
+left: 0;
+
+}
+.grid-item--box2{position: absolute;
+  top: 13%;
+  left: 14.5%;
+}
+
+.grid-item--box3 { position: absolute;
+  width: 80px;
+  height: 80px;
+top: 0; 
+left: 29%;}
+.grid-item--box4 { position: absolute; 
+top: 15.5%;
+right: 28.538%;}
+.grid-item--box5 { position: absolute;
+top: 7%;
+right: 14.12%;}
+
+.grid-item--box6 {  position: absolute;
+top: 31%;
+right:0;}
+.grid-item--box7 { position: absolute; bottom: 20%; left: 14.5%;}
+.grid-item--box8 { position: absolute; bottom: 1%; left: 29%; }
+.grid-item--box9 { position: absolute; bottom: 17.5%; right: 28.538%; }
+.grid-item--box10 { position: absolute; bottom: 26%; right: 14.12%; }
+
+
 @media screen and (min-width: 768px) {
   .gallery {
-    padding-top: 70px;
-    padding-bottom: 60px;
+    padding-top: 140px;
+    padding-bottom: 120px;
   }
   .gallery__visual {
     height: 264px;
     width: 620px;
     left: 0;
   }
+  .grid-item {
+    width: 84px;
+    height: 84px;
+    
+  }
+  
+  
+  .grid-item--box3 { width: 170px; height: 170px;
+ }
+  .grid-item--box4 { top: 16%; right: 29%;}
+  .grid-item--box5 { top: 8%; right: 14.4%;}
+  
+    .grid-item--box7 {  bottom: 21%;}
+  .grid-item--box9 {  bottom: 18%; right: 29%; }
+  .grid-item--box10 {  bottom: 26.5%; right: 14.4%;}
 }
 @media screen and (min-width: 1280px) {
   .gallery__visual {
     height: 430px;
     width: 1008px;
   }
+  .grid-item {
+    width: 130px;
+    height: 130px;
+    
+  }
+ 
+ 
+  .grid-item--box2{
+    top: 15%;
+    }
+  
+  .grid-item--box3 { 
+    width: 280px;
+    height: 280px;  }
+  .grid-item--box4 {  
+  top: 17%;
+  right: 28.4%;}
+  .grid-item--box5 { 
+  top: 8%;
+  }
+  
+    .grid-item--box7 {  bottom: 21%; left: 14.5%;}
+   .grid-item--box9 {  bottom: 19%;}
+  .grid-item--box10 {  bottom: 28%;}
 }
