--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,17 +2,54 @@
    <div class="container">
       <h2 class="visually-hidden">Our photo gallery</h2>
       <div class="gallery__visual">
-         <picture>
-            <source srcset="../src/images/desktop/gallery/gallery.png 1x, ../src/images/desktop/gallery/gallery@2x.png 2x"
-               media="(min-width: 1200px)">
-            <source srcset="../src/images/tablet/gallery/gallery.png 1x, ../src/images/tablet/gallery/gallery@2x.png 2x"
-               media="(min-width: 768px)">
-            <source srcset="../src/images/mobile/gallery/gallery.png 1x, ../src/images/mobile/gallery/gallery@2x.png 2x"
-               media="(min-width: 320px)">
-         
-            <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery.png" alt="gallery">
-         </picture>
+         <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 160 }'>
+            <div class="grid-item grid-item--box1">
+               <picture>
+                  <source srcset="../src/images/desktop/gallery/gallery1.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery1.png" alt="gallery">
+               </picture>
+            </div>
+            <div class="grid-item grid-item--box2"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery2.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery2.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box3"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery3.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery3.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box4"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery4.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery4.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box5"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery5.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery5.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box6"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery6.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery6.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box7"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery7.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery7.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box8"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery8.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery8.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box9"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery9.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery9.png" alt="gallery">
+               </picture></div>
+            <div class="grid-item grid-item--box10"><picture>
+                  <source srcset="../src/images/desktop/gallery/gallery10.png">
+                 <img class="gallery__visual-img" src="../src/images/desktop/gallery/gallery10.png" alt="gallery">
+               </picture></div>
+                  
+         </div>
       </div>
-   </div>
+      
 
 </section>
+
+<script src="./masonry.pkgd.js"></script>
