--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,9 +1,11 @@
 <header class="header">
   <div class="overlay"></div>
   <div class="container">
-    <a class="logo link" href="">
-      <img class="logo-img" src="./images/mobile/logo/logo.jpg" alt="logo image" width="199" />
-    </a>
+    <div class="logo-wrapper">
+      <a class="logo link" href="">
+        <img class="logo-img" src="./images/mobile/logo/logo1.png" alt="logo image" width="199" />
+      </a>
+    </div>
     <nav class="navigation">
       <ul class="navigation-list list">
         <li class="navigation-list__item">
@@ -29,47 +31,60 @@
 <main>
   <section class="hero">
     <div class="container">
-      <div class="title-wrapper">
-        <h1 class="hero__title">
-          ice cream made with <span class="hero__title-accent">passion</span>
-        </h1>
-        <button class="modal-btn" type="button">Products></button>
-        <button class="modal-btn" type="button">How it's made?</button>
+      <div class="hero__main-text">
+        <div class="title-wrapper">
+          <h1 class="hero__title">
+            ice cream made with <span class="hero__title-accent">passion</span>
+          </h1>
+          <ul class="hero__buttons">
+            <li>
+              <a href="#products"><button class="modal-btn" type="button">Products></button></a>
+            </li>
+            <li>
+              <a href="#how"><button class="modal-btn" type="button">How it's made?</button></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="hero__counters-wrapper">
+          <ul class="counters-list">
+            <li class="counters-list__item">
+              16<br /><span class="counters-list__item-plaintext">cafes</span>
+            </li>
+            <li class="counters-list__item">
+              23 <span class="counters-list__item-plaintext">food tracks</span>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="hero__images-container">
-        <picture>
-          <source
-            srcset="
-              ./images/desktop/hero/slider-icecream_dt.png    1x,
-              ./images/desktop/hero/slider-icecream_dt@2x.png 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            srcset="
-              ./images/tablet/hero/slider-icecream_tb.png    1x,
-              ./images/tablet/hero/slider-icecream_tb@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              ./images/mobile/hero/slider-icecream_mb.png    1x,
-              ./images/mobile/hero/slider-icecream_mb@2x.png 2x
-            "
-            media="(min-width: 320px)"
-          />
-          <img
-            class="hero__image"
-            src="./images/desktop/hero/slider-icecream_dt.png"
-            alt="Ice cream"
-          />
-        </picture>
-      </div>
-      <div class="hero__counters-wrapper">
-        <p>16 cafes</p>
-        <p>23 food tracks</p>
-      </div>
+      <picture>
+        <source
+          srcset="
+            ./images/desktop/hero/slider-icecream_dt.png    1x,
+            ./images/desktop/hero/slider-icecream_dt@2x.png 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./images/tablet/hero/slider-icecream_tb.png    1x,
+            ./images/tablet/hero/slider-icecream_tb@2x.png 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./images/mobile/hero/slider-icecream_mb.png    1x,
+            ./images/mobile/hero/slider-icecream_mb@2x.png 2x
+          "
+          media="(min-width: 320px)"
+        />
+        <img
+          class="hero__image"
+          src="./images/desktop/hero/slider-icecream_dt.png"
+          alt="Ice cream"
+        />
+      </picture>
       <div class="hero__bioeco-info">
         <picture>
           <source
@@ -77,7 +92,7 @@
               ./images/desktop/hero/slider-milkjug_dt.png    1x,
               ./images/desktop/hero/slider-milkjug_dt@2x.png 2x
             "
-            media="(min-width: 1200px)"
+            media="(min-width: 1280px)"
           />
           <source
             srcset="
@@ -92,7 +107,7 @@
             alt="milk jug"
           />
         </picture>
-        <p>
+        <p class="hero__bioeco-info-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et
         </p>
@@ -105,7 +120,7 @@
               ./images/desktop/hero/slider-woman_dt.png    1x,
               ./images/desktop/hero/slider-woman_dt@2x.png 2x
             "
-            media="(min-width: 1200px)"
+            media="(min-width: 1280px)"
           />
           <source
             srcset="
