--- a/src/sass/layout/_customer-reviews.scss
+++ b/src/sass/layout/_customer-reviews.scss
@@ -9,6 +9,8 @@
       width: 926px;
     }
   }
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .slider {
@@ -26,12 +28,31 @@
   }
 
   &__text-container {
+    position: relative;
     padding: 43px 66px 26px 57px;
     margin-bottom: 24px;
     background: #fafafa;
   }
 
+  &__66 {
+    position: absolute;
+    width: 54px;
+    height: 40px;
+    top: 28px;
+    left: 61px;
+
+    @media (min-width: 768px) {
+      top: 30px;
+      left: 40px;
+    }
+    @media (min-width: 1200px) {
+      top: 32px;
+      left: 50px;
+    }
+  }
+
   &__text {
+    position: relative;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 500;
