--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -6,6 +6,9 @@
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-1.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
+                    <svg class="slider__66">
+                        <use href="./images/icons.svg#brackets"></use>
+                    </svg>
                     <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
                         sem. In hendrerit nulla
                         quam nunc, accumsan
@@ -18,9 +21,12 @@
             </li>
             <li class="slider__item">
                 <picture class="slider__img">
-                    <img class="slider__customer-img" src="./images/mobile/reviews/customer-1.png" alt="Customer photo">
+                    <img class="slider__customer-img" src="./images/mobile/reviews/customer-2.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
+                    <svg class="slider__66">
+                        <use href="./images/icons.svg#brackets"></use>
+                    </svg>
                     <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
                         sem. In hendrerit
                         nulla
@@ -34,9 +40,12 @@
             </li>
             <li class="slider__item">
                 <picture class="slider__img">
-                    <img class="slider__customer-img" src="./images/mobile/reviews/customer-1.png" alt="Customer photo">
+                    <img class="slider__customer-img" src="./images/mobile/reviews/customer-3.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
+                    <svg class="slider__66">
+                        <use href="./images/icons.svg#brackets"></use>
+                    </svg>
                     <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
                         sem. In hendrerit
                         nulla
