--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,7 +2,7 @@
    <div class="container">
       <h2 class="visually-hidden">Our photo gallery</h2>
       <div class="gallery__visual">
-         <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 160 }'>
+         <!-- <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 160 }'> -->
             <div class="grid-item grid-item--box1">
                <picture>
                   <source srcset="../src/images/desktop/gallery/gallery1.png">
@@ -52,4 +52,4 @@
 
 </section>
 
-<script src="./masonry.pkgd.js"></script>
+<!-- <script src="./masonry.pkgd.js"></script> -->
