--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -37,10 +37,10 @@
             ice cream made with <span class="hero__title-accent">passion</span>
           </h1>
           <ul class="hero__buttons">
-            <li>
+            <li class="hero__buttons-item">
               <a href="#products"><button class="modal-btn" type="button">Products></button></a>
             </li>
-            <li>
+            <li class="hero__buttons-item">
               <a href="#how"><button class="modal-btn" type="button">How it's made?</button></a>
             </li>
           </ul>
