--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -67,6 +67,11 @@
   @media screen and (min-width: 768px) {
     margin-top: 38px;
     width: 160px;
+    font-family: var(--main-text);
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.31;
+    text-align: center;
   }
 }
 
@@ -209,6 +214,15 @@
 }
 .hero__buttons {
   display: flex;
+}
+.hero__buttons-item {
+}
+
+.hero__buttons-item:not(:last-child) {
+  margin-right: 8px;
+  @media screen and (min-width: 1280px) {
+    margin-right: 15px;
+  }
 }
 
 .navigation-list {
