--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -1,6 +1,6 @@
 .modal-btn {
   min-width: 62px;
-  padding: 9px 15px;
+  padding: 9px 12px;
   border: 1px solid transparent;
   border-radius: 25px;
   font-weight: 400;
@@ -15,5 +15,15 @@
   &:focus {
     background-color: #ecebeb;
     color: var(--accent-color-main);
+  }
+
+  @media screen and (min-width: 1280px) {
+    min-width: 102px;
+    padding: 15px 21px;
+    border: 1px solid transparent;
+    border-radius: 25px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.28;
   }
 }
