--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -3,6 +3,12 @@
         <ul class="slider list">
             <li class="slider__item">
                 <picture>
+-1.webp 1x, ./images/mobile/reviews/customer-1@2x.webp 2x"
+                        media="min-width: 768px" type="image/webp">
+                    <source srcset="./images/mobile/reviews/customer-1.webp 1x, ./images/mobile/reviews/customer-1@2x.webp 2x"
+                        media="min-width: 320px" type="image/webp">
+                    <source srcset="./images/mobile/reviews/customer-1.png 1x, ./images/mobile/reviews/customer-1@2x.png 2x"
+                        media="min-width: 320px">
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-1.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
@@ -20,7 +26,11 @@
                 <p class="slider__customer-location">Emily, Los Angeles</p>
             </li>
             <li class="slider__item">
-                <picture class="slider__img">
+                <picture>
+                    <source srcset="./images/mobile/reviews/customer-2.webp 1x, ./images/mobile/reviews/customer-2@2x.webp 2x"
+                        media="min-width: 320px" type="image/webp">
+                    <source srcset="./images/mobile/reviews/customer-2.png 1x, ./images/mobile/reviews/customer-2@2x.png 2x"
+                        media="min-width: 320px">
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-2.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
@@ -36,10 +46,14 @@
                 <svg class="slider__dots">
                     <use href="./images/icons.svg#clients_dot"></use>
                 </svg>
-                <p class="slider__customer-location">Emily, Los Angeles</p>
+                <p class="slider__customer-location">Lukasenko, Minsk</p>
             </li>
             <li class="slider__item">
-                <picture class="slider__img">
+                <picture>
+                    <source srcset="./images/mobile/reviews/customer-3.webp 1x, ./images/mobile/reviews/customer-3@2x.webp 2x"
+                        media="min-width: 320px" type="image/webp">
+                    <source srcset="./images/mobile/reviews/customer-3.png 1x, ./images/mobile/reviews/customer-3@2x.png 2x"
+                        media="min-width: 320px">
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-3.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
@@ -55,7 +69,7 @@
                 <svg class="slider__dots">
                     <use href="./images/icons.svg#clients_dot"></use>
                 </svg>
-                <p class="slider__customer-location">Emily, Los Angeles</p>
+                <p class="slider__customer-location">Putin, Moscow</p>
             </li>
         </ul>
     </div>
