all min html and css fro about and products done

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,6 +4,7 @@
     <p class="about__suptitle">Tradition and Love</p>
     <h2 id="about" class="about__title">How It’s Made?</h2>
     </div>
+<div class="about__textwrap">
 
 <picture>
         <source srcset="
@@ -36,7 +37,7 @@
             <img class="about_image" src="./images/mobile/about/cow.png"
             alt="cow with milk jug splashing">
         </picture>    
-
+<div class="about__textwap2">
     <p class="about__text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros.
     Maecenas eleifend erat at justo fringilla.</p>
 
@@ -51,5 +52,7 @@
             </use>
         </svg>
     </button>
+    </div>
+    </div>
     </div>
 </section>
