--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -7,18 +7,68 @@
   background-size: contain;
   background-position: bottom;
   background-blend-mode: multiply;
+
+  @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .about {
+      margin-left: auto;
+      margin-right: auto;
+      background-color: var(--background-color-main);
+      background-image: url(../images/mobile/about/bg@2x.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: bottom;
+      background-blend-mode: multiply;
+    }
+  }
 }
 
-@media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) {
   .about {
     margin-left: auto;
     margin-right: auto;
     background-color: var(--background-color-main);
-    background-image: url(../images/mobile/about/bg@2x.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: bottom;
     background-blend-mode: multiply;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .about {
+      margin-left: auto;
+      margin-right: auto;
+      background-color: var(--background-color-main);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: bottom;
+      background-blend-mode: multiply;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .about {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--background-color-main);
+    background-image: url(../images/desktop/about/bg.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    background-blend-mode: multiply;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .about {
+      margin-left: auto;
+      margin-right: auto;
+      background-color: var(--background-color-main);
+      background-image: url(../images/desktop/about/bg@2x.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: bottom;
+      background-blend-mode: multiply;
+    }
   }
 }
 
@@ -35,6 +85,16 @@
   margin-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 30px;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 30px;
+      line-height: 34px;
+    }
+  }
 }
 
 .about__title {
@@ -48,10 +108,37 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   margin-bottom: 18px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 55px;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
+      line-height: 66px;
+    }
+  }
+}
+
+.about__textwrap {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .about_image {
+  width: 280px;
   margin: 0 auto;
+
+  @media screen and (min-width: 768px) {
+    width: 340px;
+    float: left;
+
+    @media screen and (min-width: 1280px) {
+      width: 516px;
+    }
+  }
 }
 
 .about__text {
@@ -65,6 +152,10 @@
   margin-bottom: 32px;
   margin-left: 30px;
   margin-right: 30px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 
 .about__subtext {
@@ -75,6 +166,11 @@
   line-height: 19px;
   margin-left: 30px;
   margin-right: 30px;
+
+  @media screen and (min-width: 768px) {
+    display: inline-block;
+    font-size: 14px;
+  }
 }
 
 .about__subtext + .about__subtext {
@@ -82,8 +178,46 @@
 }
 
 .about-button {
+  min-width: 62px;
+  padding: 9px 12px;
+  border: 1px solid transparent;
+  border-radius: 25px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18.23px;
+
   margin-top: 18px;
   margin-bottom: 37px;
   margin-left: 30px;
   align-items: center;
+
+  cursor: pointer;
+  background-color: var(--accent-text-color);
+  color: var(--accent-color-main);
+  transition: color 250ms linear, background-color 250ms linear;
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+    color: var(--accent-color-main);
+  }
+
+  @media screen and (min-width: 768px) {
+    min-width: 102px;
+    padding: 15px 21px;
+    font-size: 14px;
+    line-height: 1.28;
+
+    @media screen and (min-width: 768px) {
+      min-width: 176px;
+      padding: 11px 37px;
+      font-size: 16px;
+      line-height: 21px;
+      margin-top: 45px;
+    }
+  }
+}
+
+.about-btn__icon {
+  margin-left: 13px;
 }
