--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,8 +1,18 @@
-.products {
+.products .container {
   margin-top: 121px;
   margin-bottom: 98px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 122px;
+    margin-bottom: 112px;
+
+    @media screen and (min-width: 1280px) {
+      margin-top: 127px;
+      margin-bottom: 119px;
+    }
+  }
 }
 
 .products__suptitle {
@@ -14,6 +24,16 @@
   line-height: 21px;
   text-align: center;
   text-transform: uppercase;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 30px;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 30px;
+      line-height: 34px;
+    }
+  }
 }
 
 .products__title {
@@ -27,37 +47,63 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   margin-bottom: 144px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 55px;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 58px;
+      line-height: 66px;
+      margin-bottom: 259px;
+    }
+  }
 }
 
 .products__list {
   list-style: none;
   display: block;
-  // margin-left: auto;
-  // margin-right: auto;
-  // width: 100%;
-  // height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: auto;
 
-  // @media screen and (min-width: 768px) {
-  //   display: flex;
-  //   flex-wrap: wrap;
-  //   margin-top: -34px;
-  //   margin-left: -34px;
-  // }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin-top: -10px;
+    margin-left: -5px;
+    padding: 0;
+  }
 }
 
 .products__item {
   max-width: 280px;
 
-  // @media screen and (min-width: 768px) {
-  //   margin-top: 34px;
-  //   margin-left: 34px;
-  //   max-width: 220px;
-  //   flex-basis: calc(100% / 3);
-  // }
+  @media screen and (min-width: 768px) {
+    margin-top: 10px;
+    margin-left: 10px;
+    max-width: 220px;
+    width: calc(100% / 3);
+
+    @media screen and (min-width: 1280px) {
+      margin-top: 10px;
+      max-width: 335px;
+      width: calc(100% / 3);
+    }
+  }
 }
 
-.products__item:not(:first-child) {
-  margin-top: 129px;
+@media screen and (min-width: 320px) {
+  .products__item:not(:first-child) {
+    margin-top: 129px;
+
+    @media screen and (min-width: 768px) {
+      margin-top: 10px;
+    }
+  }
 }
 
 .product-icecream {
@@ -83,6 +129,15 @@
   padding-right: 15px;
   position: absolute;
   top: -25%;
+
+  @media screen and (min-width: 768px) {
+    padding-left: 0px;
+    padding-right: 0px;
+
+    @media screen and (min-width: 1280px) {
+      top: -40%;
+    }
+  }
 }
 
 .product__sub-header {
@@ -96,6 +151,11 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   padding-top: 160px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 152px;
+  }
 }
 
 .product__icon--dots {
@@ -104,7 +164,6 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
 }
 
 .product_description {
@@ -117,15 +176,35 @@
   text-align: center;
   letter-spacing: 0.04em;
   margin-top: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 0 40px;
+
+  @media screen and (min-width: 768px) {
+    padding: 0 11px;
+
+    @media screen and (min-width: 1280px) {
+      font-size: 16px;
+      line-height: 28px;
+      padding: 0 44px;
+    }
+  }
 }
+
 .product__link--wrap {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 30px;
   padding-bottom: 41px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 40px;
+    padding-bottom: 40px;
+
+    @media screen and (min-width: 1280px) {
+      margin-top: 62px;
+      padding-bottom: 50px;
+    }
+  }
 }
 
 .product__link {
