--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,25 +2,16 @@
     <div class="container">
         <h2 class="section-title visually-hidden">Advantages</h2>
         <ul class="advantages-list list">
-            <li class="advantages-list__item">
-                <svg class="advatages-list__img">
-                    <use class="advantages-list_icon" href="./images/icons.svg#bucket_milk"></use>
-                </svg>
+            <li class="advantages-list__item milk">
                 <h3 class="advantages-list__title">721</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages-list__item">
-                <svg class="advatages-list__img">
-                    <use class="advantages-list_icon" href="./images/icons.svg#bucket_apple"></use>
-                </svg>
+            <li class="advantages-list__item apple">
                 <h3 class="advantages-list__title">16kg</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
-            <li class="advantages-list__item">
-                <svg class="advatages-list__img">
-                    <use class="advantages-list_icon" href="./images/icons.svg#heart_lollypop"></use>
-                </svg>
-                <h3 class="advantages-list__title">84</h3>
+            <li class="advantages-list__item lollypop">
+                 <h3 class="advantages-list__title">84</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
