--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,9 +1,40 @@
 .advantages {
   background-color: var(--background-color-main);
 }
-
+.advantages-list {
+  margin-top: -38px;
+}
 .advantages-list__item {
   margin-top: 38px;
+}
+.milk::before {
+  content: '';
+  display: block;
+  margin-bottom: 36px;
+  background-image: url(../images/bucket_milk.svg);
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+}
+
+.apple::before {
+  content: '';
+  display: block;
+  margin-bottom: 36px;
+  background-image: url(../images/bucket_apple.svg);
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+}
+
+.lollypop::before {
+  content: '';
+  display: block;
+  margin-bottom: 36px;
+  background-image: url(../images/heart_lollypop.svg);
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
 }
 
 .advantages-list__title {
