add mobile version
не добавляется нижний паддинг  в copyright и border тянется только на ширину контейнера

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,32 +1,35 @@
 <footer class="footer"> 
 <div class="container">
-<p class="suptitle">homemade ice cream made</p>
+<p class="subtitle">homemade ice cream made</p>
 <h2 class="section-title"> with passion </h2>
 <ul class="social-list list">
     <li class="social-list__item">
         <a class="social-list__link link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
-        <svg class="social-list__icon">
+        <svg class="social-list__icon" width="18" height="18">
             <use href="./images/icons.svg#github"></use>
         </svg>
     </a>
     </li>
     <li class="social-list__item">
         <a class="social-list__link link"  href="https://telegram.org/" target="_blank" rel="noopener noreferrer">
-    <svg class="social-list__icon">
-        <use href=""></use>
+    <svg class="social-list__icon" width="18" height="14">
+        <use href="./images/icons.svg#telegram"></use>
     </svg>
     </a>
     </li>
     <li class="social-list__item">
         <a class="social-list__link link"  href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-    <svg class="social-list__icon">
-        <use href=""></use>
+    <svg class="social-list__icon" width="8" height="18">
+        <use href="./images/icons.svg#facebook"></use>
     </svg>
     </a>
     </li>
 </ul>
 
-<b class="call"> Feel free to contact <a class="tel" href="tel:+610383766284" link>+61 (0) 383 766 284</a></b>
-<div class="copyright"> &copy;2019 - IceCream. All Rights Reserved.</div>
+<b class="call"> Feel free to contact&ensp; <a class="call__tel link" href="tel:+610383766284"> +61 (0) 383 766 284 </a> 
+</b>
+<div class="copyright-wrapper"> 
+   <p class="copyright"> &copy;2019 - IceCream. All Rights Reserved. </p>
+</div>
 </div>
 </footer>
