--- a/src/sass/components/_section-title.scss
+++ b/src/sass/components/_section-title.scss
@@ -1,4 +1,5 @@
 .section-title {
+  font-family: var(--secondary-font);
   color: var(--accent-color-main);
   font-size: 34px;
   line-height: 1.14;
