--- a/src/sass/components/_subtitle.scss
+++ b/src/sass/components/_subtitle.scss
@@ -1,4 +1,6 @@
 .subtitle {
+  margin-bottom: 16px;
+  font-family: var(--secondary-font);
   color: var(--accent-color-secondary);
   font-size: 18px;
   line-height: 1.17;
