--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,3 +1,81 @@
 .footer {
+  padding-top: 56px;
+  padding-bottom: 25px;
   background-color: var(--background-color-main);
+}
+.social-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 43px;
+  margin-bottom: 46px;
+
+  &__item {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+
+    background-color: var(--accent-color-secondary);
+
+    &:not(:last-child) {
+      margin-right: 22px;
+    }
+  }
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+
+    transition: background-color 250ms var(--timing-function);
+
+    &:hover,
+    &:focus {
+      background-color: var(--accent-color-main);
+    }
+  }
+}
+
+.call {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 43px;
+  font-size: 12px;
+  line-height: 1.8;
+  text-align: right;
+  color: var(--secondary-text-color);
+
+  &__tel {
+    color: var(--accent-color-main);
+    transition: color 250ms var(--timing-function);
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color-secondary);
+    }
+  }
+}
+
+.copyright-wrapper {
+  // width: 100vw;
+  border-top: 1px solid #e1e1e1;
+  padding-top: 22px;
+  padding-bottom: 25px;
+}
+.copyright {
+  width: 150px;
+  height: 42px;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: var(--main-text-color);
 }
