--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,6 +1,11 @@
-<header class="header">
+  <header class="header" id="home">
   <div class="overlay"></div>
   <div class="container">
+    <button type="button" class="menu-button" data-menu-button>
+      <svg class="menu-icon">
+        <use href="./images/icons.svg#Burger_menu"></use>
+      </svg>
+    </button>
     <div class="logo-wrapper">
       <a class="logo link" href="">
         <img class="logo-img" src="./images/mobile/logo/logo1.png" alt="logo image" width="199" />
@@ -26,6 +31,39 @@
       </ul>
     </nav>
     <button class="modal-btn" type="button">Buy now ></button>
+    <div class="mobile-menu" data-menu>
+        <button type="button" class="mobile-menu__close-button" data-menu-close>
+          <svg class="mobile-menu__close-icon">
+            <use href="./images/icons.svg#close_icon"></use>
+          </svg>
+        </button>
+        <button class="modal-btn" type="button">Buy now ></button>
+        <ul class="mobile-menu__list list">
+          <li class="mobile-menu__item">
+            <a href="#home" class="mobile-menu__link link"
+              >Home</a
+            >
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#about" class="mobile-menu__link link"
+              >About us</a
+            >
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#how" class="mobile-menu__link link">How it's made</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#products" class="mobile-menu__link link"
+              >Our products</a
+            >
+          </li>
+          <li class="mobile-menu__item">
+            <a href="#contact" class="mobile-menu__link link"
+              >Contact</a
+            >
+          </li>
+        </ul>
+    
   </div>
 </header>
 <main>
@@ -38,7 +76,7 @@
           </h1>
           <ul class="hero__buttons list">
             <li class="hero__buttons-item">
-              <a href="#products"><button class="modal-btn" type="button">Products></button></a>
+              <a href="#products"><button class="modal-btn" type="button">Products</button></a>
             </li>
             <li class="hero__buttons-item">
               <a href="#how"><button class="modal-btn" type="button">How it's made?</button></a>
@@ -48,11 +86,13 @@
 
         <div class="hero__counters-wrapper">
           <ul class="counters-list list">
-            <li class="counters-list__item">
-              16<br /><span class="counters-list__item-plaintext">cafes</span>
+            <li class="counters-list__item">              
+              16<br /><span class="counters-list__item-plaintext">cafes</span> <div class="counters-list__ellipse">
+              </div>
             </li>
             <li class="counters-list__item">
-              23 <span class="counters-list__item-plaintext">food tracks</span>
+              23 <span class="counters-list__item-plaintext">food tracks</span> <div class="counters-list__ellipse">
+              </div>
             </li>
           </ul>
         </div>
@@ -85,6 +125,7 @@
           alt="Ice cream"
         />
       </picture>
+      <div class="ellipse"></div>
       <div class="hero__bioeco-info">
         <picture>
           <source
@@ -108,10 +149,17 @@
           />
         </picture>
         <p class="hero__bioeco-info-text">
+          <a href="#">
+          <button class="round-button" type="button">
+          <svg class="round-button__arrow">
+            <use href="./images/icons.svg#arrow_right_long"></use>
+          </svg>
+        </button>
+        </a>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et
         </p>
-        <button class="round-button" type="button"></button>
+        
       </div>
       <div>
         <picture>
@@ -137,5 +185,6 @@
         </picture>
       </div>
     </div>
-  </section>
+  </section>  
 </main>
+
