--- a/src/sass/components/_modal-btn.scss
+++ b/src/sass/components/_modal-btn.scss
@@ -1,6 +1,6 @@
 .modal-btn {
   min-width: 62px;
-  padding: 9px 12px;
+  height: 44px;
   border: 1px solid transparent;
   border-radius: 25px;
   font-weight: 400;
@@ -19,7 +19,6 @@
 
   @media screen and (min-width: 1280px) {
     min-width: 102px;
-    padding: 15px 21px;
     border: 1px solid transparent;
     border-radius: 25px;
     font-weight: 400;
