add tablet version
помучится попозже , изменить размер иконок телеграма и фейсбука

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding-top: 56px;
-  padding-bottom: 25px;
+  // padding-bottom: 25px;
   background-color: var(--background-color-main);
 }
 .social-list {
@@ -69,13 +69,59 @@
 }
 .copyright {
   width: 150px;
-  height: 42px;
+  // height: 42px;
 
   margin-left: auto;
   margin-right: auto;
 
   font-size: 14px;
   line-height: 1.5;
+  font-weight: 700;
   text-align: center;
   color: var(--main-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 82px;
+  }
+  .title-wrapper {
+    min-width: 340px;
+  }
+  .social-list {
+    margin-top: 0;
+
+    &__link {
+      width: 34px;
+      height: 34px;
+    }
+    &__icon {
+      width: 20px;
+      height: 20px;
+
+      &:nth-child(2) {
+        height: 18px;
+      }
+      &:nth-child(3) {
+        width: 8px;
+        height: 20px;
+      }
+    }
+  }
+  .call {
+    margin-bottom: 175px;
+    font-size: 14px;
+  }
+  .title-and-social-wrapper {
+    display: flex;
+  }
+  .copyright {
+    min-width: 276px;
+    line-height: 1.8;
+    letter-spacing: 0.02em;
+  }
+  .copyright-wrapper {
+    padding-top: 29px;
+    padding-bottom: 18px;
+  }
 }
