--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,11 @@
 <footer class="footer"> 
 <div class="container">
+    <div class="title-and-social-wrapper">
+    <div class="title-wrapper">
 <p class="subtitle">homemade ice cream made</p>
 <h2 class="section-title"> with passion </h2>
+</div>
+<div class="social-and-call-wrapper">
 <ul class="social-list list">
     <li class="social-list__item">
         <a class="social-list__link link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
@@ -28,6 +32,8 @@
 
 <b class="call"> Feel free to contact&ensp; <a class="call__tel link" href="tel:+610383766284"> +61 (0) 383 766 284 </a> 
 </b>
+</div>
+</div>
 <div class="copyright-wrapper"> 
    <p class="copyright"> &copy;2019 - IceCream. All Rights Reserved. </p>
 </div>
