--- a/src/sass/components/_section-title.scss
+++ b/src/sass/components/_section-title.scss
@@ -4,4 +4,9 @@
   font-size: 34px;
   line-height: 1.14;
   text-transform: uppercase;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+  }
 }
