--- a/src/sass/components/_subtitle.scss
+++ b/src/sass/components/_subtitle.scss
@@ -5,4 +5,10 @@
   font-size: 18px;
   line-height: 1.17;
   text-transform: uppercase;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+  }
 }
